# dyno_testbench_cpp

./: .gitignore  CMakeLists.txt
.claude/: settings.json
config/: topology.dyno2.template6.json  topology.example.json
config/ethercat_device_config/: topology.dyno2.template3.json  topology.dyno2.template6.json
config/novanta_error_code_mapping/: error_mapping_sectioned.json
config/novanta_register_list/: novanta_ethercat_registers_list.json
desktop_executables/: install_desktop.sh  launch_dyno.sh
env_setup_scripts/: enable_ethercat_caps.sh  env_setup.sh  rt_setup_part2.sh  tune_realtime.sh
env_setup_scripts/archive/: bootstrap_venv_ecat.sh  run_ethercat_python.sh
include/ethercat_core/: data_types.hpp  master.hpp
include/ethercat_core/devices/beckhoff/el2004/: data_types.hpp
include/ethercat_core/devices/beckhoff/el3002/: adapter.hpp  data_types.hpp
include/ethercat_core/devices/beckhoff/el5032/: adapter.hpp  data_types.hpp
include/ethercat_core/devices/motor_drives/Novanta/Everest/: adapter.hpp  data_types.hpp  pdo.hpp
include/ethercat_core/devices/motor_drives/Novanta/Volcano/: adapter.hpp  data_types.hpp  pdo.hpp
install/: local_setup.sh  setup.sh
install/dyno_ros2_bridge/share/dyno_ros2_bridge/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/dyno_ros2_bridge/share/dyno_ros2_bridge/cmake/: dyno_ros2_bridgeConfig.cmake
log/: latest_build
src/dyno_test_scripts/: backdriving_torque.py  cogging_torque_compensation.py  encoder_linearization_test.py  example_speed_ramp.py  fbk_gen_test.py  run_in_test.py  thermal_cycle.py  torque_ramp.py  torque_ramp_2way.py
src/ecat_functional_tests/: CMakeLists.txt  drive_simple_speed_test1.cpp  drive_simple_speed_test2.cpp  dyno2_integrated_test1.cpp  dyno2_integrated_test2.cpp  el2004_output_hold.cpp  el5032_data_read.cpp  elm3002_data_read.cpp  elm3002_pdo_check.cpp
src/ecat_functional_tests/archive/: drive_position_read_check.py  drive_read_only_check.py  drive_read_only_check_volcano.py  drive_simple_speed_test1.py  drive_simple_speed_test2.py  ds402_enable_sequence.py  dyno_integrated_tests1.py  dyno_integrated_tests2.py  el2004_output_hold.py  el5032_data_read.py  el5032_register_read.py  elm3002_data_read.py  elm3002_input_read.py  elm3002_pdo_check.py  elm3002_sdo_read.py  static_torque_ramp.py  step_response.py
src/ethercat_core/: CMakeLists.txt  __init__.py  default_adapter_factory.hpp  loop.cpp  loop.hpp  loop.py  master.cpp  master.hpp
src/ethercat_core/archive/: data_types.py  master.py  pdo.py
src/ethercat_core/archive/devices/beckhoff/el3002/: data_types.py
src/ethercat_core/archive/devices/motor_drives/drive_bases/: __init__.py
src/ethercat_core/archive/devices/motor_drives/drive_bases/ds402/: __init__.py
src/ethercat_core/archive/devices/motor_drives/novanta/: __init__.py
src/ethercat_core/archive/devices/motor_drives/novanta/Everest/: pdo.py
src/ethercat_core/archive/devices/motor_drives/novanta/Volcano/: adapter.py  data_types.py
src/ethercat_core/devices/: base.hpp
src/ethercat_core/devices/beckhoff/el2004/: adapter.cpp  adapter.hpp
src/ethercat_core/devices/beckhoff/el3002/: __init__.py  adapter.cpp  adapter.hpp  adapter.py
src/ethercat_core/devices/beckhoff/el5032/: adapter.cpp
src/ethercat_core/devices/motor_drives/: __init__.py
src/ethercat_core/devices/motor_drives/Novanta/Everest/: __init__.py  adapter.cpp  adapter.hpp  adapter.py  data_types.hpp  data_types.py  pdo.cpp  pdo.hpp  pdo.py
src/ethercat_core/devices/motor_drives/Novanta/Volcano/: __init__.py  adapter.cpp  adapter.hpp  data_types.hpp  pdo.cpp  pdo.hpp  pdo.py
src/ethercat_core/devices/motor_drives/drive_bases/ds402/: adapter.py  data_types.hpp  data_types.py  pdo.cpp  pdo.hpp  pdo.py
src/interface_bridges/: CMakeLists.txt
src/interface_bridges/common/: ipc_types.hpp
src/interface_bridges/qt/: dyno_qt_bridge.py
src/interface_bridges/ros2/: CMakeLists.txt  bridge_ros2.cpp  build.sh  dyno_gui.py  dyno_plot.py  pdo_log.hpp  run_gui.sh
src/interface_bridges/udp/: bridge_udp.cpp  dyno_plotly_dash.py
src/testbench_utils/: CMakeLists.txt  function_generator.cpp  function_generator.hpp
src/testbenches/dual_novanta_testbench/: dual_novanta_testbench.cpp  dual_novanta_testbench.hpp
src/tests/: CMakeLists.txt  drive_read_only_check_volcano.py  drive_simple_speed_test1.cpp  drive_simple_speed_test1.py  drive_simple_speed_test2.cpp  drive_simple_speed_test2.py  ds402_enable_sequence.py  dyno2_integrated_test1.cpp  dyno2_integrated_test2.cpp  dyno_integrated_tests1.py  el2004_output_hold.cpp  el5032_data_read.cpp  elm3002_data_read.cpp  elm3002_data_read.py  elm3002_input_read.py  elm3002_pdo_check.cpp  elm3002_sdo_read.py
src/tests/archive/: drive_read_only_check_volcano.py  dyno_integrated_tests2.py  elm3002_data_read.py  elm3002_input_read.py  elm3002_pdo_check.py  elm3002_sdo_read.py  static_torque_ramp.py
src/tools/: CMakeLists.txt  dyno_log_viewer.py  scan_pysoem.py  scan_soem.cpp
src/tools/archive/: bringup_loop.py
src/tools/post_processing/bode_plot/: dyno_bode.py  dyno_bode_gui.py  dyno_bode_plot.py
src/tools/post_processing/kt_plot/: dyno_kt_gui.py
